Started a minimalistic template to demonstrate the use of the css border-image property

--- a/index.html
+++ b/index.html
@@ -3,31 +3,31 @@
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>The Simplon's hitchiker guide</title>
+    <title>The Simplon's hitchiker guide to the web</title>
     
     <link href="node_modules/bootstrap/dist/css/bootstrap.css" rel="stylesheet">
     <script src="js/jquery.js"></script>
-    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js"></script> -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js"></script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.js"></script>
 
     <link rel="stylesheet" type="text/css" media="screen" href="style.css" />
     <script type="text/javascript" src="js/scripts.js"></script>
-    <!-- <link rel="shortcut icon" type="image/png"href="favicon.png"> -->
+    <link rel="shortcut icon" type="image/png"href="img/logo.png">
 </head>
 <body>
 
 
     <div class="container">
-        <!-- Le header du glossaire -->
         <div class="blank_row"></div>
 
         <div class="row">
-            <div class="col">
+            <div id="glossary" class="col">
+                <!-- Le header du glossaire -->                
                 <header class="row">
                     Header
                 </header>
 
-                <div id="main-content" class="row">
+                <div id="content" class="row">
                     Content
                 </div>
 
