Ajout des elements HTML composants la page accuel accueil* du site

--- a/index.html
+++ b/index.html
@@ -24,15 +24,59 @@
             <div id="glossary" class="col">
                 <!-- Le header du glossaire -->                
                 <header class="row">
+                    <div class="title">
+                        <h1>Glossary</h1><!-- En police cursive  -->
+                    </div>
+                    <div class="searchbar">
+                        <input type="text" placeholder="Entrer le mot à rechercher">
+                    </div>
                     Header
                 </header>
 
                 <div id="content" class="row">
+                    <div class="nuage">
+                        <img src="" alt="">
+                    </div><!-- On parlait de mettre notre nuage sous forme d'image ? Je pensais a grid les mots -->
+                    <div class="etiquettes"><!-- Etiquettes en a ? -->
+                        <a href="">A</a>
+                        <a href="">B</a>
+                        <a href="">C</a>
+                        <a href="">D</a>
+                        <a href="">E</a>
+                        <a href="">F</a>
+                        <a href="">G</a>
+                        <a href="">H</a>
+                        <a href="">I</a>
+                        <a href="">J</a>
+                        <a href="">K</a>
+                        <a href="">L</a>
+                        <a href="">M</a>
+                        <a href="">N</a>
+                        <a href="">O</a>
+                        <a href="">P</a>
+                        <a href="">Q</a>
+                        <a href="">R</a>
+                        <a href="">S</a>
+                        <a href="">T</a>
+                        <a href="">U</a>
+                        <a href="">V</a>
+                        <a href="">W</a>
+                        <a href="">X</a>
+                        <a href="">Y</a>
+                        <a href="">Z</a>
+                        <a href="">#</a>
+                    </div>
                     Content
                 </div>
 
                 <!-- Le footer du glossaire -->
                 <footer class="row">
+                    <div class="simplon">
+                        <p><img src="" alt="Logo simplon">Simplon</p>
+                    </div>
+                    <div class="signature">
+                        <p>Vanessa<br/>Geoffrey<br/>Christopher<br/>Valentin</p>
+                    </div>
                     Footer
                 </footer>
             </div>
