Working on styling the page like a paper notebook in  css

--- a/index.html
+++ b/index.html
@@ -20,21 +20,27 @@
     <div class="container">
         <div class="blank_row"></div>
 
-        <div class="row">
-            <div id="glossary" class="col">
-                <!-- Le header du glossaire -->                
-                <header class="row">
-                    Header
-                </header>
+        <div class="paper row">
+                <div class="lines">
+                    <div id="glossary" class="col">
+                        <!-- Le header du glossaire -->                
+                        <header class="row">
+                            Header
+                        </header>
 
-                <div id="content" class="row">
-                    Content
+                        <div id="content" class="row">
+                            Content
+                        </div>
+
+                        <!-- Le footer du glossaire -->
+                        <footer class="row">
+                            Footer
+                        </footer>
+                    </div>
+                    <div class="holes hole-top"></div>
+                    <div class="holes hole-middle"></div>
+                    <div class="holes hole-bottom"></div>
                 </div>
-
-                <!-- Le footer du glossaire -->
-                <footer class="row">
-                    Footer
-                </footer>
             </div>
         </div>
 
