OMG... I forgot to modify a class.. just corrected one word

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
     <div class="blank_row row"></div>
 
-    <div class="container">
+    <div class="container row">
 
         <div class="col-md-2"></div>
 
