Hard cover is on the way

--- a/index.html
+++ b/index.html
@@ -50,35 +50,37 @@
                     </div>
                 
                     <div id="booklets-container">
-                        <div class="booklet">#</div>
-                        <div class="booklet">A</div>
-                        <div class="booklet">B</div>
-                        <div class="booklet">C</div>
-                        <div class="booklet">D</div>
-                        <div class="booklet">E</div>
-                        <div class="booklet">F</div>
-                        <div class="booklet">G</div>
-                        <div class="booklet">H</div>
-                        <div class="booklet">I</div>
-                        <div class="booklet">J</div>
-                        <div class="booklet">K</div>
-                        <div class="booklet">L</div>
-                        <div class="booklet">M</div>
-                        <div class="booklet">N</div>
-                        <div class="booklet">O</div>
-                        <div class="booklet">P</div>
-                        <div class="booklet">Q</div>
-                        <div class="booklet">R</div>
-                        <div class="booklet">S</div>
-                        <div class="booklet">T</div>
-                        <div class="booklet">U</div>
-                        <div class="booklet">V</div>
-                        <div class="booklet">W</div>
-                        <div class="booklet">X</div>
-                        <div class="booklet">Y</div>
-                        <div class="booklet">Z</div>
+                        <div class="booklet x1">#</div>
+                        <div class="booklet x1">A</div>
+                        <div class="booklet x1">B</div>
+                        <div class="booklet x1">C</div>
+                        <div class="booklet x1">D</div>
+                        <div class="booklet x1">E</div>
+                        <div class="booklet x2">F</div>
+                        <div class="booklet x2">G</div>
+                        <div class="booklet x2">H</div>
+                        <div class="booklet x2">I</div>
+                        <div class="booklet x2">J</div>
+                        <div class="booklet x3">K</div>
+                        <div class="booklet x3">L</div>
+                        <div class="booklet x3">M</div>
+                        <div class="booklet x3">N</div>
+                        <div class="booklet x3">O</div>
+                        <div class="booklet x4">P</div>
+                        <div class="booklet x4">Q</div>
+                        <div class="booklet x4">R</div>
+                        <div class="booklet x4">S</div>
+                        <div class="booklet x4">T</div>
+                        <div class="booklet x5">U</div>
+                        <div class="booklet x5">V</div>
+                        <div class="booklet x5">W</div>
+                        <div class="booklet x5">X</div>
+                        <div class="booklet x5">Y</div>
+                        <div class="booklet x5">Z</div>
                     </div>
                     
+                    <div id="inner-hard-cover"></div>
+                    <div id="hard-cover"></div>
             </div>
 
             <div class="col-md-2"></div>
