--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                         <div id="glossary">
     
                             <header class="row">
-                                Header
+                                <h1>GLOSSAIRE</h1>
                             </header>
     
                             <div id="content" class="row">
