Starting the hard front cover

--- a/index.html
+++ b/index.html
@@ -43,9 +43,6 @@
                             <footer class="row">
                                 Footer
                             </footer>
-                            <div class="holes hole-top"></div>
-                            <div class="holes hole-middle"></div>
-                            <div class="holes hole-bottom"></div>
                         </div>                
     
                     </div>
@@ -82,6 +79,12 @@
                     
                     <div id="inner-hard-cover"></div>
                     <div id="hard-cover"></div>
+
+                    <div class="holes hole-top"></div>
+                    <div class="holes hole-middle"></div>
+                    <div class="holes hole-bottom"></div>
+
+                    <div class=""></div>
             </div>
 
             <div class="col-md-2"></div>
