--- a/index.html
+++ b/index.html
@@ -48,6 +48,11 @@
                             <div class="holes hole-top"></div>
                             <div class="holes hole-middle"></div>
                             <div class="holes hole-bottom"></div>
+                            <div class="ring">
+                                <div class="ring1"></div>
+                                <div class="ring2"></div>
+                                <div class="ring3"></div>
+                            </div>
                         </div>                
     
                     </div>
