Ajout des divs cachés de chaque marque page

--- a/index.html
+++ b/index.html
@@ -40,6 +40,33 @@
                             <div id="content" class="row">
                                 <h1>GLOSSAIRE</h1>
                                 <p>Un glossaire c'est bien!</p>
+                                <div class="mq #"></div>
+                                <div class="mq 1"></div>
+                                <div class="mq 2"></div>
+                                <div class="mq 3"></div>
+                                <div class="mq 4"></div>
+                                <div class="mq 5"></div>
+                                <div class="mq 6"></div>
+                                <div class="mq 7"></div>
+                                <div class="mq 8"></div>
+                                <div class="mq 9"></div>
+                                <div class="mq 10"></div>
+                                <div class="mq 11"></div>
+                                <div class="mq 12"></div>
+                                <div class="mq 13"></div>
+                                <div class="mq 14"></div>
+                                <div class="mq 15"></div>
+                                <div class="mq 16"></div>
+                                <div class="mq 17"></div>
+                                <div class="mq 18"></div>
+                                <div class="mq 19"></div>
+                                <div class="mq 20"></div>
+                                <div class="mq 21"></div>
+                                <div class="mq 22"></div>
+                                <div class="mq 23"></div>
+                                <div class="mq 24"></div>
+                                <div class="mq 25"></div>
+                                <div class="mq 26"></div>                                
                             </div>
     
                             <footer class="row">
